--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.env.development
+.env.production
 
 # Spyder project settings
 .spyderproject
@@ -161,3 +163,4 @@ cython_debug/
 
 /ascii-video-processor/backend/output
 /ascii-video-processor/backend/uploads
+
