--- a/ascii-video-processor/package.json
+++ b/ascii-video-processor/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/cors": "^2.8.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
