--- a/ascii-video-processor/requirements.txt
+++ b/ascii-video-processor/requirements.txt
@@ -7,6 +7,7 @@ idna==3.10
 numpy==2.2.3
 opencv-python==4.11.0.86
 pillow==11.1.0
+psutil==7.0.0
 pydantic==2.10.6
 pydantic_core==2.27.2
 python-multipart==0.0.20
